--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Thejaswin",
   "license": "ISC",
+  "engines":{
+    "node": "18.x"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
